[package]
name = "chachamir"
version = "0.1.0"
edition = "2021"
author = "Ross McKenzie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
clap = { version = "3.1", features = ["derive"] }
path-clean = "0.1.0"
rand = "0.8.5"
rusty_secrets = "0.2.2"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"