[package]
name = "chachamir"
version = "0.1.0"
edition = "2021"
author = "Ross McKenzie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
clap = { version = "3.1", features = ["derive"] }
path-clean = "0.1.0"
rand = "^0.7"
sharks = "0.4"
hex = "0.4.3"
glob = "0.3.0"
infer = "0.3"
ed25519-dalek = "1.0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"